# youtube-watch-history-importer

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
src/youtube_watch_history_importer/: cli.py
tests/: test_cli.py
