[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-watch-history-importer"
version = "0.1.0"
description = "Import YouTube Google Takeout watch history into Obsidian social archives and daily notes"
requires-python = ">=3.11"

[project.scripts]
youtube-watch-history-importer = "youtube_watch_history_importer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
